# directory-web-scraper

./: .gitignore  README.md  ag_church_scraper.py  pyproject.toml
churches_by_state/: 260305_ag_churches_ohio.csv  260318_ag_churches_alabama.csv  260318_ag_churches_central_district.csv  260318_ag_churches_florida_multicultural.csv  260318_ag_churches_georgia.csv  260318_ag_churches_illinois.csv  260318_ag_churches_indiana.csv  260318_ag_churches_kansas.csv  260318_ag_churches_minnesota.csv  260318_ag_churches_mississippi.csv  260318_ag_churches_nebraska.csv  260318_ag_churches_north_dakota.csv  260318_ag_churches_oregon.csv  260318_ag_churches_south_dakota.csv  260318_ag_churches_wisconsin.csv
